feat(sub): update

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,23 @@
 {
   "extends": [
-    "prettier",
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended",
     "plugin:@next/next/recommended",
+    "prettier",
     "next/core-web-vitals"
   ],
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "caughtErrorsIgnorePattern": "^_"
+      }
+    ],
     "@next/next/no-img-element": "off",
     "prettier/prettier": [
       "error",
