--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^9.7.1",
     "apollo-server-micro": "^3.6.7",
+    "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
     "graphql": "^15.3.0",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
+    "mongoose": "^6.2.10",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -23,7 +26,11 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/typescript": "2.4.8",
+    "@graphql-codegen/typescript-operations": "2.3.5",
+    "@graphql-codegen/typescript-resolvers": "2.6.1",
     "@next/eslint-plugin-next": "^12.1.4",
+    "@types/bcrypt": "^5.0.0",
     "@types/micro-cors": "^0.1.2",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
@@ -34,9 +41,6 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2",
-    "typescript": "4.6.3",
-    "@graphql-codegen/typescript-operations": "2.3.5",
-    "@graphql-codegen/typescript": "2.4.8",
-    "@graphql-codegen/typescript-resolvers": "2.6.1"
+    "typescript": "4.6.3"
   }
 }
