--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "apollo-server-micro": "^3.6.7",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
+    "cookie": "^0.4.2",
     "graphql": "^15.3.0",
+    "jsonwebtoken": "^8.5.1",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "mongoose": "^6.2.10",
     "next": "12.1.4",
+    "nodemailer": "^6.7.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "reflect-metadata": "^0.1.13",
@@ -31,8 +34,10 @@
     "@graphql-codegen/typescript-resolvers": "2.6.1",
     "@next/eslint-plugin-next": "^12.1.4",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.4.1",
     "@types/micro-cors": "^0.1.2",
     "@types/node": "17.0.23",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
