--- a/codegen.yml
+++ b/codegen.yml
@@ -6,4 +6,4 @@ generates:
     plugins:
       - 'typescript'
       - 'typescript-operations'
-      - 'typescript-resolvers'
+      - 'typescript-react-apollo'
