--- a/.eslintrc
+++ b/.eslintrc
@@ -2,13 +2,15 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended",
+    "plugin:jsx-a11y/recommended",
     "plugin:@next/next/recommended",
-    "prettier",
-    "next/core-web-vitals"
+    "plugin:prettier/recommended",
+    "next/core-web-vitals",
+    "prettier"
   ],
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["@typescript-eslint", "jsx-a11y", "prettier"],
   "rules": {
+    "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-unused-vars": [
       "warn",
