--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@hookform/resolvers": "^2.8.8",
     "@typegoose/typegoose": "^9.7.1",
     "apollo-server-micro": "^3.6.7",
+    "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
+    "clsx": "^1.1.1",
     "cookie": "^0.4.2",
+    "google-auth-library": "^7.14.1",
     "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.1",
     "micro": "^9.3.4",
@@ -24,14 +34,18 @@
     "nodemailer": "^6.7.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
+    "react-hook-form": "^7.29.0",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.6.2",
     "@graphql-codegen/typescript": "2.4.8",
     "@graphql-codegen/typescript-operations": "2.3.5",
-    "@graphql-codegen/typescript-resolvers": "2.6.1",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.11",
     "@next/eslint-plugin-next": "^12.1.4",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.4.1",
@@ -40,12 +54,17 @@
     "@types/nodemailer": "^6.4.4",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "@types/react-facebook-login": "^4.1.4",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "autoprefixer": "^10.4.4",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "postcss": "^8.4.12",
     "prettier": "^2.6.2",
+    "sass": "^1.50.0",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.6.3"
   }
 }
