--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
   "rules": {
     "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
+    "jsx-a11y/anchor-is-valid": "off",
     "@typescript-eslint/no-unused-vars": [
       "warn",
       {
