--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
+    "cloudinary": "^1.29.0",
     "clsx": "^1.1.1",
     "cookie": "^0.4.2",
     "google-auth-library": "^7.14.1",
