--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@hookform/resolvers": "^2.8.8",
+    "@reduxjs/toolkit": "^1.8.1",
     "@typegoose/typegoose": "^9.7.1",
     "apollo-server-micro": "^3.6.7",
     "axios": "^0.26.1",
@@ -33,12 +34,14 @@
     "micro-cors": "^0.1.1",
     "mongoose": "^6.2.10",
     "next": "12.1.4",
+    "next-redux-wrapper": "^7.0.5",
     "nodemailer": "^6.7.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.29.0",
+    "react-redux": "^7.2.8",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "yup": "^0.32.11"
