--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,8 @@
     "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "jsx-a11y/anchor-is-valid": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
     "@typescript-eslint/no-unused-vars": [
       "warn",
       {
