--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "deepmerge": "^4.2.2",
     "google-auth-library": "^7.14.1",
     "graphql": "^15.3.0",
+    "isomorphic-unfetch": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
@@ -69,6 +70,7 @@
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "sass": "^1.50.0",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.3"
   }
