--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.29.0",
     "react-redux": "^7.2.8",
+    "react-timeago": "^6.2.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "yup": "^0.32.11"
@@ -61,6 +62,7 @@
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
     "@types/react-facebook-login": "^4.1.4",
+    "@types/react-timeago": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "autoprefixer": "^10.4.4",
     "eslint": "8.12.0",
