--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react-redux": "^7.2.8",
     "react-timeago": "^6.2.1",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.5.0",
+    "socket.io-client": "^4.5.0",
     "type-graphql": "^1.1.1",
     "yup": "^0.32.11"
   },
