--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "micro-cors": "^0.1.1",
     "mongoose": "^6.2.10",
     "next": "12.1.4",
+    "next-redux-cookie-wrapper": "^2.1.2",
     "next-redux-wrapper": "^7.0.5",
     "nodemailer": "^6.7.3",
     "react": "17.0.2",
